# axum-trading-test

./: .gitignore  Cargo.toml  GUIDANCE.md  README.md
migrations/: 001_init.sql  002_oauth_accounts.sql
src/: config.rs  db.rs  error.rs  main.rs
src/handlers/: auth.rs  mod.rs  trading.rs
src/middleware/: auth.rs
src/models/: mod.rs  order.rs  portfolio.rs  stock.rs  user.rs
