[package]
name = "stock-trading-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio","postgres","macros","uuid","chrono","rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }

# Config & env
dotenvy = "0.15"

# HTTP utilities
tower-http = { version = "0.5", features = ["cors"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal support
rust_decimal = { version = "1", features = ["serde"] }

utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
utoipa-axum = "0.1"